--- a/web/assets/Messages.properties
+++ b/web/assets/Messages.properties
@@ -13,7 +13,7 @@ msg_multi_placeholder_corrected = It''s a {0} day... let''s go {1}?
 index.title = Splicing wall
 index.test.input = input
 index.select.screen = Screen wall
-index.select.synchronous = synchronous
+index.select.synchronize = synchronize
 index.left.action.title1 = in signal
 index.left.action.title2 = profiles
 index.left.action.title3 = setting
@@ -23,3 +23,6 @@ index.left.action.btnname3 = setting
 index.right.action.btnname1 = new window
 index.right.action.btnname2 = close window
 index.right.action.btnname3 = clear all
+
+index.msg.synchronizing = synchronizing...
+index.msg.synchronized = synchronized!
