--- a/web/assets/Messages_zh-CN.properties
+++ b/web/assets/Messages_zh-CN.properties
@@ -5,7 +5,7 @@ msg_complex = 早上好 {0}!
 index.title = 拼接墙
 index.test.input = 输入
 index.select.screen = 屏幕墙
-index.select.synchronous = 同步
+index.select.synchronize = 同步
 index.left.action.title1 = 输入信号
 index.left.action.title2 = 情景模式
 index.left.action.title3 = 设置
@@ -15,3 +15,6 @@ index.left.action.btnname3 = 设置
 index.right.action.btnname1 = 新建窗口
 index.right.action.btnname2 = 关闭窗口
 index.right.action.btnname3 = 清空
+
+index.msg.synchronizing = 正在同步显示墙信息...
+index.msg.synchronized = 同步完成！
