--- a/web/assets/Messages_zh-CN.properties
+++ b/web/assets/Messages_zh-CN.properties
@@ -2,6 +2,7 @@ msg_hello = 你好
 msg_world = 世界
 msg_complex = 早上好 {0}!
 
+# 页面文字
 index.title = 拼接墙
 index.test.input = 输入
 index.select.screen = 屏幕墙
@@ -16,5 +17,19 @@ index.right.action.btnname1 = 新建窗口
 index.right.action.btnname2 = 关闭窗口
 index.right.action.btnname3 = 清空
 
+# 长按呼出菜单
+index.pop_menu.fullscreen = 全屏最大化
+index.pop_menu.full_sgl_src = 单屏最大化
+index.pop_menu.top_level = 置顶
+index.pop_menu.bottom_level = 置底
+index.pop_menu.up_level = 上移
+index.pop_menu.down_level = 下移
+index.pop_menu.lock = 锁定
+index.pop_menu.unlock = 解锁
+index.pop_menu.restore = 还原
+index.pop_menu.close = 关闭
+index.pop_menu.info = 属性
+
+# 消息提示
 index.msg.synchronizing = 正在同步显示墙信息...
 index.msg.synchronized = 同步完成！
