--- a/web/assets/Messages_en-US.properties
+++ b/web/assets/Messages_en-US.properties
@@ -10,6 +10,7 @@ msg_url = http://localhost/webapp/servletName?solution={0}
 msg_multi_placeholder = It\'s a {0} day... let\'s go {1}?
 msg_multi_placeholder_corrected = It''s a {0} day... let''s go {1}?
 
+# 页面文字
 index.title = Splicing wall
 index.test.input = input
 index.select.screen = Screen wall
@@ -24,5 +25,19 @@ index.right.action.btnname1 = new window
 index.right.action.btnname2 = close window
 index.right.action.btnname3 = clear all
 
+# 长按呼出菜单
+index.pop_menu.fullscreen = fullscreen
+index.pop_menu.full_sgl_src = single scr
+index.pop_menu.top_level = top
+index.pop_menu.bottom_level = bottom
+index.pop_menu.up_level = up level
+index.pop_menu.down_level = down level
+index.pop_menu.lock = lock
+index.pop_menu.unlock = unlock
+index.pop_menu.restore = restore
+index.pop_menu.close = close
+index.pop_menu.info = info
+
+# 消息提示
 index.msg.synchronizing = synchronizing...
 index.msg.synchronized = synchronized!
