--- a/web/assets/Messages.properties
+++ b/web/assets/Messages.properties
@@ -15,7 +15,7 @@ index.title = Splicing wall
 index.test.input = input
 index.select.screen = Screen wall
 index.select.synchronize = synchronize
-index.left.action.title1 = in signal
+index.left.action.title1 = input signal
 index.left.action.title2 = profiles
 index.left.action.title3 = setting
 index.left.action.btnname1 = input
@@ -27,7 +27,7 @@ index.right.action.btnname3 = clear all
 
 # 长按呼出菜单
 index.pop_menu.fullscreen = fullscreen
-index.pop_menu.full_sgl_src = single scr
+index.pop_menu.full_sgl_src = single screen
 index.pop_menu.top_level = top
 index.pop_menu.bottom_level = bottom
 index.pop_menu.up_level = up level
@@ -41,3 +41,7 @@ index.pop_menu.info = info
 # 消息提示
 index.msg.synchronizing = synchronizing...
 index.msg.synchronized = synchronized!
+
+# 模态框
+index.modal.title = Attribute
+index.modal.btn.close = close
