--- a/web/assets/Messages_zh-CN.properties
+++ b/web/assets/Messages_zh-CN.properties
@@ -33,3 +33,7 @@ index.pop_menu.info = 属性
 # 消息提示
 index.msg.synchronizing = 正在同步显示墙信息...
 index.msg.synchronized = 同步完成！
+
+# 模态框
+index.modal.title = 属性
+index.modal.btn.close = 关闭
