--- a/web/assets/Messages_en-US.properties
+++ b/web/assets/Messages_en-US.properties
@@ -45,3 +45,10 @@ index.msg.synchronized = synchronized!
 # 模态框
 index.modal.title = Attribute
 index.modal.btn.close = close
+index.modal.btn.save = save
+index.modal.lable.id = win ID
+index.modal.lable.sid = signal ID
+index.modal.lable.x = x
+index.modal.lable.y = y
+index.modal.lable.w = width
+index.modal.lable.h = height
