--- a/web/assets/Messages_zh-CN.properties
+++ b/web/assets/Messages_zh-CN.properties
@@ -37,3 +37,10 @@ index.msg.synchronized = 同步完成！
 # 模态框
 index.modal.title = 属性
 index.modal.btn.close = 关闭
+index.modal.btn.save = 保存
+index.modal.lable.id = 窗口ID
+index.modal.lable.sid = 信号源ID
+index.modal.lable.x = x
+index.modal.lable.y = y
+index.modal.lable.w = 宽
+index.modal.lable.h = 高
