--- a/web/assets/Messages_en-US.properties
+++ b/web/assets/Messages_en-US.properties
@@ -16,10 +16,10 @@ index.test.input = input
 index.select.screen = Screen wall
 index.select.synchronize = synchronize
 index.left.action.title1 = input signal
-index.left.action.title2 = profiles
+index.left.action.title2 = scene
 index.left.action.title3 = setting
 index.left.action.btnname1 = input
-index.left.action.btnname2 = profiles
+index.left.action.btnname2 = scene
 index.left.action.btnname3 = setting
 index.right.action.btnname1 = new window
 index.right.action.btnname2 = close window
