--- a/web/assets/Messages_en-US.properties
+++ b/web/assets/Messages_en-US.properties
@@ -21,6 +21,8 @@ index.left.action.title3 = setting
 index.left.action.btnname1 = input
 index.left.action.btnname2 = scene
 index.left.action.btnname3 = setting
+index.left.scene.title = scene mode
+
 index.right.action.btnname1 = new window
 index.right.action.btnname2 = close window
 index.right.action.btnname3 = clear all
@@ -37,6 +39,11 @@ index.pop_menu.unlock = unlock
 index.pop_menu.restore = restore
 index.pop_menu.close = close
 index.pop_menu.info = info
+
+index.pop_menu.open = open
+index.pop_menu.save = save
+index.pop_menu.edit = edit
+index.pop_menu.clear = clear all
 
 # 消息提示
 index.msg.synchronizing = synchronizing...
