--- a/web/assets/Messages_zh-CN.properties
+++ b/web/assets/Messages_zh-CN.properties
@@ -13,6 +13,7 @@ index.left.action.title3 = 设置
 index.left.action.btnname1 = 输入
 index.left.action.btnname2 = 情景模式
 index.left.action.btnname3 = 设置
+index.left.scene.title = 预设模式
 index.right.action.btnname1 = 新建窗口
 index.right.action.btnname2 = 关闭窗口
 index.right.action.btnname3 = 清空
@@ -29,6 +30,11 @@ index.pop_menu.unlock = 解锁
 index.pop_menu.restore = 还原
 index.pop_menu.close = 关闭
 index.pop_menu.info = 属性
+
+index.pop_menu.open = 打开
+index.pop_menu.save = 保存
+index.pop_menu.edit = 编辑
+index.pop_menu.clear = 清除所有
 
 # 消息提示
 index.msg.synchronizing = 正在同步显示墙信息...
