--- a/web/assets/Messages.properties
+++ b/web/assets/Messages.properties
@@ -42,6 +42,7 @@ index.pop_menu.info = info
 index.pop_menu.open = open
 index.pop_menu.save = save
 index.pop_menu.edit = edit
+index.pop_menu.del = delete
 index.pop_menu.clear = clear all
 
 # 消息提示
@@ -49,14 +50,20 @@ index.msg.synchronizing = synchronizing...
 index.msg.synchronized = synchronized!
 
 # 模态框
-index.modal.title = Attribute
+index.modal.title.attribute = Attribute
+index.modal.title.confirm = Confirm
+index.modal.title.prompt = Prompt
 index.modal.btn.close = close
 index.modal.btn.save = save
+index.modal.btn.confirm = confirm
+index.modal.btn.cancel = cancel
 index.modal.lable.id = win ID
 index.modal.lable.sid = signal ID
 index.modal.lable.x = x
 index.modal.lable.y = y
 index.modal.lable.w = width
 index.modal.lable.h = height
+index.modal.msg.del = Are you sure you want to delete this record?
+index.modal.msg.del.all = Are you sure you want to delete all records?
 
 
