--- a/web/assets/Messages_zh-CN.properties
+++ b/web/assets/Messages_zh-CN.properties
@@ -34,6 +34,7 @@ index.pop_menu.info = 属性
 index.pop_menu.open = 打开
 index.pop_menu.save = 保存
 index.pop_menu.edit = 编辑
+index.pop_menu.del = 删除
 index.pop_menu.clear = 清除所有
 
 # 消息提示
@@ -41,12 +42,18 @@ index.msg.synchronizing = 正在同步显示墙信息...
 index.msg.synchronized = 同步完成！
 
 # 模态框
-index.modal.title = 属性
+index.modal.title.attribute = 属性
+index.modal.title.confirm = 确认
+index.modal.title.prompt = 提示
 index.modal.btn.close = 关闭
 index.modal.btn.save = 保存
+index.modal.btn.confirm = 确认
+index.modal.btn.cancel = 取消
 index.modal.lable.id = 窗口ID
 index.modal.lable.sid = 信号源ID
 index.modal.lable.x = x
 index.modal.lable.y = y
 index.modal.lable.w = 宽
 index.modal.lable.h = 高
+index.modal.msg.del = 您确定要删除它吗？
+index.modal.msg.del.all = 您确定要删除所有吗？
