--- a/web/assets/Messages.properties
+++ b/web/assets/Messages.properties
@@ -43,7 +43,7 @@ index.pop_menu.open = open
 index.pop_menu.save = save
 index.pop_menu.edit = edit
 index.pop_menu.del = delete
-index.pop_menu.clear = clear all
+index.pop_menu.clear = clean up
 
 # 消息提示
 index.msg.synchronizing = synchronizing...
