--- a/web/assets/Messages_en-US.properties
+++ b/web/assets/Messages_en-US.properties
@@ -38,7 +38,7 @@ index.pop_menu.lock = lock
 index.pop_menu.unlock = unlock
 index.pop_menu.restore = restore
 index.pop_menu.close = close
-index.pop_menu.info = info
+index.pop_menu.attr = attribute
 
 index.pop_menu.open = open
 index.pop_menu.save = save
