--- a/web/assets/Messages_zh-CN.properties
+++ b/web/assets/Messages_zh-CN.properties
@@ -29,7 +29,7 @@ index.pop_menu.lock = 锁定
 index.pop_menu.unlock = 解锁
 index.pop_menu.restore = 还原
 index.pop_menu.close = 关闭
-index.pop_menu.info = 属性
+index.pop_menu.attr = 属性
 
 index.pop_menu.open = 打开
 index.pop_menu.save = 保存
