--- a/web/assets/Messages.properties
+++ b/web/assets/Messages.properties
@@ -25,6 +25,7 @@ index.left.scene.title = scene mode
 index.right.action.btnname1 = new window
 index.right.action.btnname2 = close window
 index.right.action.btnname3 = clear all
+index.right.action.btnname4 = draw window
 
 # 长按呼出菜单
 index.pop_menu.fullscreen = fullscreen
@@ -48,6 +49,8 @@ index.pop_menu.clear = clean up
 # 消息提示
 index.msg.synchronizing = synchronizing...
 index.msg.synchronized = synchronized!
+index.msg.invalid.input_signal = invalid input signal
+index.msg.no.select_win = you had to select a window
 
 # 模态框
 index.modal.title.attribute = Attribute
