--- a/web/assets/Messages_zh-CN.properties
+++ b/web/assets/Messages_zh-CN.properties
@@ -17,6 +17,7 @@ index.left.scene.title = 预设模式
 index.right.action.btnname1 = 新建窗口
 index.right.action.btnname2 = 关闭窗口
 index.right.action.btnname3 = 清空
+index.right.action.btnname4 = 手势开窗
 
 # 长按呼出菜单
 index.pop_menu.fullscreen = 全屏最大化
@@ -40,6 +41,8 @@ index.pop_menu.clear = 清除所有
 # 消息提示
 index.msg.synchronizing = 正在同步显示墙信息...
 index.msg.synchronized = 同步完成！
+index.msg.invalid.input_signal = 无效的输入信号
+index.msg.no.select_win = 您必须选择一个窗口
 
 # 模态框
 index.modal.title.attribute = 属性
