--- a/web/assets/Messages_en-US.properties
+++ b/web/assets/Messages_en-US.properties
@@ -28,6 +28,14 @@ index.right.action.btnname2 = close window
 index.right.action.btnname3 = clear all
 index.right.action.btnname4 = draw window
 
+# 下拉设置菜单
+index.setting.comm = communication
+index.setting.splice = splice
+index.setting.software = software
+index.setting.help = &nbsp;help
+index.setting.user_manual = user manual
+index.setting.version_info = version info
+
 # 长按呼出菜单
 index.pop_menu.fullscreen = fullscreen
 index.pop_menu.full_sgl_src = single screen
