--- a/web/assets/Messages_zh-CN.properties
+++ b/web/assets/Messages_zh-CN.properties
@@ -19,6 +19,14 @@ index.right.action.btnname2 = 关闭窗口
 index.right.action.btnname3 = 清空
 index.right.action.btnname4 = 手势开窗
 
+# 下拉设置菜单
+index.setting.comm = 通信设置
+index.setting.splice = 拼接设置
+index.setting.software = 软件设置
+index.setting.help = &nbsp;帮助
+index.setting.user_manual = 用户手册
+index.setting.version_info = 版本信息
+
 # 长按呼出菜单
 index.pop_menu.fullscreen = 全屏最大化
 index.pop_menu.full_sgl_src = 单屏最大化
