--- a/web/assets/Messages_en-US.properties
+++ b/web/assets/Messages_en-US.properties
@@ -29,12 +29,24 @@ index.right.action.btnname3 = clear all
 index.right.action.btnname4 = draw window
 
 # 下拉设置菜单
-index.setting.comm = communication
-index.setting.splice = splice
-index.setting.software = software
+index.setting.comm = COMMUNICATION
+index.setting.splice = SPLICE
+index.setting.software = SOFTWARE
+index.setting.software.lang = Language Settings
+index.setting.software.zh_CN = Chinese(Simplified)
+index.setting.software.en_US = U.S. English
+index.setting.software.lang_switcher = langSwitcher
+index.setting.software.open_win = Open the window Settings
+index.setting.software.logic_fill = window logic fill mode:
+index.setting.software.tip = Tip Settings
+index.setting.software.menu_prompt = The menu prompt:
+index.setting.software.scenario_tip = Scenario plan tip:
 index.setting.help = &nbsp;help
 index.setting.user_manual = user manual
-index.setting.version_info = version info
+index.setting.version_info = VERSON
+index.setting.vi.product_name = Product name: intelligent control system for joining together of skyworth
+index.setting.vi.file_version = File version:
+index.setting.vi.copyright = All right reserved: &copy;&nbsp;security technology co.,LTD. Shenzhen skyworth group of hin.Retain ownership
 
 # 长按呼出菜单
 index.pop_menu.fullscreen = fullscreen
@@ -53,7 +65,7 @@ index.pop_menu.open = open
 index.pop_menu.save = save
 index.pop_menu.edit = edit
 index.pop_menu.del = delete
-index.pop_menu.clear = clean up
+index.pop_menu.clean = clean up
 
 # 消息提示
 index.msg.synchronizing = synchronizing...
