--- a/web/assets/Messages_zh-CN.properties
+++ b/web/assets/Messages_zh-CN.properties
@@ -23,9 +23,21 @@ index.right.action.btnname4 = 手势开窗
 index.setting.comm = 通信设置
 index.setting.splice = 拼接设置
 index.setting.software = 软件设置
+index.setting.software.lang = 语言设置
+index.setting.software.zh_CN = 简体中文
+index.setting.software.en_US = 美式英语
+index.setting.software.lang_switcher = 切换语言
+index.setting.software.open_win = 开窗设置
+index.setting.software.logic_fill = 窗口逻辑占满模式:
+index.setting.software.tip = 提示设置
+index.setting.software.menu_prompt = 菜单提示:
+index.setting.software.scenario_tip = 情景预案提示:
 index.setting.help = &nbsp;帮助
 index.setting.user_manual = 用户手册
 index.setting.version_info = 版本信息
+index.setting.vi.product_name = 产品名称：创维群欣智能拼接控制系统
+index.setting.vi.file_version = 文件版本：
+index.setting.vi.copyright = 版权所有：&copy;&nbsp;深圳创维群欣安防科技有限公司。保留所有权
 
 # 长按呼出菜单
 index.pop_menu.fullscreen = 全屏最大化
@@ -44,7 +56,7 @@ index.pop_menu.open = 打开
 index.pop_menu.save = 保存
 index.pop_menu.edit = 编辑
 index.pop_menu.del = 删除
-index.pop_menu.clear = 清除所有
+index.pop_menu.clean = 清除所有
 
 # 消息提示
 index.msg.synchronizing = 正在同步显示墙信息...
