--- a/web/assets/Messages_en-US.properties
+++ b/web/assets/Messages_en-US.properties
@@ -29,7 +29,15 @@ index.right.action.btnname3 = clear all
 index.right.action.btnname4 = draw window
 
 # 下拉设置菜单
-index.setting.comm = COMMUNICATION
+index.setting.comm = communication
+index.setting.comm.title = COMMUNICATION
+index.setting.comm.network  = network
+index.setting.comm.com = serial port
+index.setting.comm.ip = IP address
+index.setting.comm.port = Port
+index.setting.comm.com_port = COM port
+index.setting.comm.baud_rate = Baud rate
+
 index.setting.splice = SPLICE
 index.setting.software = SOFTWARE
 index.setting.software.lang = Language Settings
@@ -89,3 +97,13 @@ index.modal.lable.w = width
 index.modal.lable.h = height
 index.modal.msg.del = Are you sure you want to delete this record?
 index.modal.msg.del.all = Are you sure you want to delete all records?
+
+# 按钮文字
+index.btn.screen = Screen wall
+index.btn.synchronize = synchronize
+index.btn.apply = apply
+index.btn.cancel = cancel
+index.btn.yes = yes
+index.btn.no = no
+index.btn.confirm = confirm
+index.btn.auto_recognition = autoRecognition
