--- a/web/assets/Messages_zh-CN.properties
+++ b/web/assets/Messages_zh-CN.properties
@@ -5,8 +5,7 @@ msg_complex = 早上好 {0}!
 # 页面文字
 index.title = 拼接墙
 index.test.input = 输入
-index.select.screen = 屏幕墙
-index.select.synchronize = 同步
+
 index.left.action.title1 = 输入信号
 index.left.action.title2 = 情景模式
 index.left.action.title3 = 设置
@@ -21,6 +20,14 @@ index.right.action.btnname4 = 手势开窗
 
 # 下拉设置菜单
 index.setting.comm = 通信设置
+index.setting.comm.title = 通信设置
+index.setting.comm.network  = 网络连接
+index.setting.comm.com = 串口连接
+index.setting.comm.ip = IP地址
+index.setting.comm.port = 端口
+index.setting.comm.com_port = COM口
+index.setting.comm.baud_rate = 波特率
+
 index.setting.splice = 拼接设置
 index.setting.software = 软件设置
 index.setting.software.lang = 语言设置
@@ -80,3 +87,13 @@ index.modal.lable.w = 宽
 index.modal.lable.h = 高
 index.modal.msg.del = 您确定要删除它吗？
 index.modal.msg.del.all = 您确定要删除所有吗？
+
+# 按钮文字
+index.btn.screen = 屏幕墙
+index.btn.synchronize = 同步
+index.btn.apply = 应用
+index.btn.cancel = 取消
+index.btn.yes = 是
+index.btn.no = 否
+index.btn.confirm = 确定
+index.btn.auto_recognition = 自动识别
