--- a/web/assets/Messages.properties
+++ b/web/assets/Messages.properties
@@ -13,8 +13,6 @@ msg_multi_placeholder_corrected = It''s a {0} day... let''s go {1}?
 # 页面文字
 index.title = Splicing wall
 index.test.input = input
-index.select.screen = Screen wall
-index.select.synchronize = synchronize
 index.left.action.title1 = input signal
 index.left.action.title2 = scene
 index.left.action.title3 = setting
@@ -28,8 +26,38 @@ index.right.action.btnname3 = clear all
 index.right.action.btnname4 = draw window
 
 # 下拉设置菜单
-index.setting.comm = COMMUNICATION
+index.setting.comm = communication
+index.setting.comm.title = COMMUNICATION
+index.setting.comm.network  = network
+index.setting.comm.com = serial port
+index.setting.comm.ip = IP address
+index.setting.comm.port = Port
+index.setting.comm.com_port = COM port
+index.setting.comm.baud_rate = Baud rate
 index.setting.splice = SPLICE
+
+index.setting.splice.screen1 = screen 1
+index.setting.splice.screen2 = screen 2
+index.setting.splice.screen3 = screen 3
+index.setting.splice.screen4 = screen 4
+index.setting.splice.resolution = Resolution
+index.setting.splice.IMS = Independent monitor settings
+index.setting.splice.param = Splicing parameters
+index.setting.splice.physical_screen = Physical screen:
+index.setting.splice.logic_screen = Logic screen:
+index.setting.splice.leftside = Left side:
+index.setting.splice.rightside = Right side:
+index.setting.splice.row = row
+index.setting.splice.rol = rol
+index.setting.splice.screen_width = Screen width(mm):
+index.setting.splice.screen_height = Screen height(mm):
+index.setting.splice.screen_border = Screen border:
+index.setting.splice.border_top = top:
+index.setting.splice.border_bottom = bottom:
+index.setting.splice.border_left = left:
+index.setting.splice.border_right = right:
+index.setting.splice.screen_enable = Screen enable
+
 index.setting.software = SOFTWARE
 index.setting.software.lang = Language Settings
 index.setting.software.zh_CN = Chinese(Simplified)
@@ -90,4 +118,12 @@ index.modal.lable.h = height
 index.modal.msg.del = Are you sure you want to delete this record?
 index.modal.msg.del.all = Are you sure you want to delete all records?
 
-
+# 按钮文字
+index.btn.screen = Screen wall
+index.btn.synchronize = synchronize
+index.btn.apply = apply
+index.btn.cancel = cancel
+index.btn.yes = yes
+index.btn.no = no
+index.btn.confirm = confirm
+index.btn.auto_recognition = autoRecognition
