--- a/web/assets/Messages.properties
+++ b/web/assets/Messages.properties
@@ -11,7 +11,7 @@ msg_multi_placeholder = It\'s a {0} day... let\'s go {1}?
 msg_multi_placeholder_corrected = It''s a {0} day... let''s go {1}?
 
 # 页面文字
-index.title = Splicing wall
+index.title = Splicing control system
 index.test.input = input
 index.left.action.title1 = input signal
 index.left.action.title2 = scene
@@ -26,7 +26,7 @@ index.right.action.btnname3 = clear all
 index.right.action.btnname4 = draw window
 
 # 下拉设置菜单
-index.setting.comm = communication
+index.setting.comm = Communication
 index.setting.comm.title = COMMUNICATION
 index.setting.comm.network  = network
 index.setting.comm.com = serial port
@@ -34,43 +34,51 @@ index.setting.comm.ip = IP address
 index.setting.comm.port = Port
 index.setting.comm.com_port = COM port
 index.setting.comm.baud_rate = Baud rate
-index.setting.splice = SPLICE
 
+index.setting.splice = Splice
+index.setting.splice.title = SPLICE
+index.setting.splice.resolution = Resolution
+index.setting.splice.resolution_title = RESOLUTION
 index.setting.splice.screen1 = screen 1
 index.setting.splice.screen2 = screen 2
 index.setting.splice.screen3 = screen 3
 index.setting.splice.screen4 = screen 4
-index.setting.splice.resolution = Resolution
-index.setting.splice.IMS = Independent monitor settings
+index.setting.splice.ims = Independent monitor settings
 index.setting.splice.param = Splicing parameters
-index.setting.splice.physical_screen = Physical screen:
-index.setting.splice.logic_screen = Logic screen:
-index.setting.splice.leftside = Left side:
-index.setting.splice.rightside = Right side:
+index.setting.splice.physical_screen = PhysicalScreen:
+index.setting.splice.logic_screen = LogicScreen:
+index.setting.splice.left_side = Left:
+index.setting.splice.right_side = Right:
 index.setting.splice.row = row
 index.setting.splice.rol = rol
 index.setting.splice.screen_width = Screen width(mm):
 index.setting.splice.screen_height = Screen height(mm):
-index.setting.splice.screen_border = Screen border:
+index.setting.splice.screen_border = Screen border(mm):
 index.setting.splice.border_top = top:
 index.setting.splice.border_bottom = bottom:
 index.setting.splice.border_left = left:
 index.setting.splice.border_right = right:
-index.setting.splice.screen_enable = Screen enable
+index.setting.splice.screen_enable = Screen enable:
 
-index.setting.software = SOFTWARE
+index.setting.software = Software
+index.setting.software.title = SOFTWARE
 index.setting.software.lang = Language Settings
 index.setting.software.zh_CN = Chinese(Simplified)
 index.setting.software.en_US = U.S. English
-index.setting.software.lang_switcher = langSwitcher
+index.setting.software.lang_switcher = LangSwitcher
 index.setting.software.open_win = Open the window Settings
-index.setting.software.logic_fill = window logic fill mode:
+index.setting.software.logic_fill = Window logic fill mode:
 index.setting.software.tip = Tip Settings
 index.setting.software.menu_prompt = The menu prompt:
 index.setting.software.scenario_tip = Scenario plan tip:
+index.setting.software.log_tip = Log tip:
+
 index.setting.help = &nbsp;help
-index.setting.user_manual = user manual
-index.setting.version_info = VERSION
+
+index.setting.user_manual = Help
+
+index.setting.version_info = Version
+index.setting.version_info.title = VERSION
 index.setting.vi.product_name = Product name: intelligent control system for joining together of skyworth
 index.setting.vi.file_version = File version:
 index.setting.vi.copyright = All right reserved: &copy;&nbsp;security technology co.,LTD. Shenzhen skyworth group of hin.Retain ownership
@@ -120,10 +128,12 @@ index.modal.msg.del.all = Are you sure you want to delete all records?
 
 # 按钮文字
 index.btn.screen = Screen wall
-index.btn.synchronize = synchronize
-index.btn.apply = apply
-index.btn.cancel = cancel
-index.btn.yes = yes
-index.btn.no = no
-index.btn.confirm = confirm
-index.btn.auto_recognition = autoRecognition
+index.btn.synchronize = Synchronize
+index.btn.apply = Apply
+index.btn.cancel = Cancel
+index.btn.yes = Yes
+index.btn.no = No
+index.btn.confirm = Confirm
+index.btn.auto_identification = AutoIdentification
+index.btn.advance = Advance
+index.btn.default = Default
