--- a/web/assets/Messages_zh-CN.properties
+++ b/web/assets/Messages_zh-CN.properties
@@ -3,7 +3,7 @@ msg_world = 世界
 msg_complex = 早上好 {0}!
 
 # 页面文字
-index.title = 拼接墙
+index.title = 拼接控制器
 index.test.input = 输入
 
 index.left.action.title1 = 输入信号
@@ -29,19 +29,49 @@ index.setting.comm.com_port = COM口
 index.setting.comm.baud_rate = 波特率
 
 index.setting.splice = 拼接设置
+index.setting.splice.title = 拼接设置
+index.setting.splice.resolution = 屏幕分辨率
+index.setting.splice.resolution_title = 屏幕分辨率
+index.setting.splice.screen1 = 拼接墙1
+index.setting.splice.screen2 = 拼接墙2
+index.setting.splice.screen3 = 拼接墙3
+index.setting.splice.screen4 = 拼接墙4
+index.setting.splice.ims = 独立监视器设置
+index.setting.splice.param = 拼接屏参数
+index.setting.splice.physical_screen = 物理屏幕：
+index.setting.splice.logic_screen = 逻辑拼命：
+index.setting.splice.left_side = 左侧：
+index.setting.splice.right_side = 右侧：
+index.setting.splice.row = 行
+index.setting.splice.rol = 列
+index.setting.splice.screen_width = 屏幕宽(mm)：
+index.setting.splice.screen_height = 屏幕高(mm)：
+index.setting.splice.screen_border = 屏幕边框(mm)：
+index.setting.splice.border_top = 上：
+index.setting.splice.border_bottom = 下：
+index.setting.splice.border_left = 左：
+index.setting.splice.border_right = 右：
+index.setting.splice.screen_enable = 屏幕墙使能：
+
 index.setting.software = 软件设置
+index.setting.software.title = 软件设置
 index.setting.software.lang = 语言设置
 index.setting.software.zh_CN = 简体中文
 index.setting.software.en_US = 美式英语
 index.setting.software.lang_switcher = 切换语言
 index.setting.software.open_win = 开窗设置
-index.setting.software.logic_fill = 窗口逻辑占满模式:
+index.setting.software.logic_fill = 窗口逻辑占满模式：
 index.setting.software.tip = 提示设置
-index.setting.software.menu_prompt = 菜单提示:
-index.setting.software.scenario_tip = 情景预案提示:
+index.setting.software.menu_prompt = 菜单提示：
+index.setting.software.scenario_tip = 情景预案提示：
+index.setting.software.log_tip = Log提示：
+
 index.setting.help = &nbsp;帮助
+
 index.setting.user_manual = 用户手册
+
 index.setting.version_info = 版本信息
+index.setting.version_info.title = 版本信息
 index.setting.vi.product_name = 产品名称：创维群欣智能拼接控制系统
 index.setting.vi.file_version = 文件版本：
 index.setting.vi.copyright = 版权所有：&copy;&nbsp;深圳创维群欣安防科技有限公司。保留所有权
@@ -97,3 +127,5 @@ index.btn.yes = 是
 index.btn.no = 否
 index.btn.confirm = 确定
 index.btn.auto_recognition = 自动识别
+index.btn.advance = 高级
+index.btn.default = 默认
