--- a/web/assets/Messages_zh-CN.properties
+++ b/web/assets/Messages_zh-CN.properties
@@ -3,7 +3,7 @@ msg_world = 世界
 msg_complex = 早上好 {0}!
 
 # 页面文字
-index.title = 拼接墙
+index.title = 拼接控制器
 index.test.input = 输入
 
 index.left.action.title1 = 输入信号
@@ -13,10 +13,10 @@ index.left.action.btnname1 = 输入
 index.left.action.btnname2 = 情景模式
 index.left.action.btnname3 = 设置
 index.left.scene.title = 预设模式
-index.right.action.btnname1 = 新建窗口
-index.right.action.btnname2 = 关闭窗口
+index.right.action.btnname1 = 新建
+index.right.action.btnname2 = 关闭
 index.right.action.btnname3 = 清空
-index.right.action.btnname4 = 手势开窗
+index.right.action.btnname4 = 开窗
 
 # 下拉设置菜单
 index.setting.comm = 通信设置
@@ -29,19 +29,66 @@ index.setting.comm.com_port = COM口
 index.setting.comm.baud_rate = 波特率
 
 index.setting.splice = 拼接设置
+index.setting.splice.title = 拼接设置
+index.setting.splice.resolution = 屏幕分辨率
+index.setting.splice.resolution_title = 屏幕分辨率
+index.setting.splice.screen1 = 拼接墙1
+index.setting.splice.screen2 = 拼接墙2
+index.setting.splice.screen3 = 拼接墙3
+index.setting.splice.screen4 = 拼接墙4
+index.setting.splice.ims = 独立监视器设置
+index.setting.splice.param = 拼接屏参数
+index.setting.splice.physical_screen = 物理屏幕：
+index.setting.splice.logic_screen = 逻辑屏幕：
+index.setting.splice.left_side = 左侧：
+index.setting.splice.right_side = 右侧：
+index.setting.splice.row = 行
+index.setting.splice.rol = 列
+index.setting.splice.screen_width = 屏幕宽(mm)：
+index.setting.splice.screen_height = 屏幕高(mm)：
+index.setting.splice.screen_frame = 屏幕边框(mm)：
+index.setting.splice.border_top = 上
+index.setting.splice.border_bottom = 下
+index.setting.splice.border_left = 左
+index.setting.splice.border_right = 右
+index.setting.splice.screen_enable = 屏幕墙使能：
+index.setting.splice.currection_pix = 拼接屏参数修正Pix
+index.setting.splice.actHSize = 活动水平像素
+index.setting.splice.actVSize = 活动垂直像素
+index.setting.splice.hFront = 水平前沿
+index.setting.splice.vFront = 垂直前沿
+index.setting.splice.hsWidth = 水平同步宽度
+index.setting.splice.vsWidth = 垂直同步宽度
+index.setting.splice.hTotal = 水平总数
+index.setting.splice.vTotal = 垂直总数
+index.setting.splice.hSyncPol = 水平同步极性
+index.setting.splice.vSyncPol = 垂直同步极性
+index.setting.splice.fps = 刷新频率
+
 index.setting.software = 软件设置
+index.setting.software.title = 软件设置
 index.setting.software.lang = 语言设置
 index.setting.software.zh_CN = 简体中文
 index.setting.software.en_US = 美式英语
 index.setting.software.lang_switcher = 切换语言
 index.setting.software.open_win = 开窗设置
-index.setting.software.logic_fill = 窗口逻辑占满模式:
+index.setting.software.logic_fill = 窗口逻辑占满模式：
 index.setting.software.tip = 提示设置
-index.setting.software.menu_prompt = 菜单提示:
-index.setting.software.scenario_tip = 情景预案提示:
+index.setting.software.menu_prompt = 菜单提示：
+index.setting.software.scenario_tip = 情景预案提示：
+index.setting.software.log_tip = Log提示：
+index.setting.software.panel = 面板设置
+index.setting.software.ctrl_input = 控制器输入
+index.setting.software.contentual = 情景模式
+index.setting.software.matrix_input = 矩阵输入
+index.setting.software.net_video_source = 网络视频源
+
 index.setting.help = &nbsp;帮助
+
 index.setting.user_manual = 用户手册
+
 index.setting.version_info = 版本信息
+index.setting.version_info.title = 版本信息
 index.setting.vi.product_name = 产品名称：创维群欣智能拼接控制系统
 index.setting.vi.file_version = 文件版本：
 index.setting.vi.copyright = 版权所有：&copy;&nbsp;深圳创维群欣安防科技有限公司。保留所有权
@@ -75,10 +122,6 @@ index.msg.no.select_win = 您必须选择一个窗口
 index.modal.title.attribute = 属性
 index.modal.title.confirm = 确认
 index.modal.title.prompt = 提示
-index.modal.btn.close = 关闭
-index.modal.btn.save = 保存
-index.modal.btn.confirm = 确认
-index.modal.btn.cancel = 取消
 index.modal.lable.id = 窗口ID
 index.modal.lable.sid = 信号源ID
 index.modal.lable.x = x
@@ -90,10 +133,13 @@ index.modal.msg.del.all = 您确定要删除所有吗？
 
 # 按钮文字
 index.btn.screen = 屏幕墙
-index.btn.synchronize = 同步
+index.btn.syn = 同步
 index.btn.apply = 应用
 index.btn.cancel = 取消
 index.btn.yes = 是
 index.btn.no = 否
 index.btn.confirm = 确定
-index.btn.auto_recognition = 自动识别
+index.btn.auto_identification = 自动识别
+index.btn.advance = 高级
+index.btn.default = 默认
+index.btn.ok = 确定
