--- a/web/assets/Messages_en-US.properties
+++ b/web/assets/Messages_en-US.properties
@@ -11,47 +11,93 @@ msg_multi_placeholder = It\'s a {0} day... let\'s go {1}?
 msg_multi_placeholder_corrected = It''s a {0} day... let''s go {1}?
 
 # 页面文字
-index.title = Splicing wall
+index.title = Splicing control system
 index.test.input = input
 index.select.screen = Screen wall
 index.select.synchronize = synchronize
-index.left.action.title1 = input signal
+index.left.action.title1 = Input signal
 index.left.action.title2 = scene
 index.left.action.title3 = setting
-index.left.action.btnname1 = input
-index.left.action.btnname2 = scene
+index.left.action.btnname1 = ControlInput
+index.left.action.btnname2 = Contextual
 index.left.action.btnname3 = setting
-index.left.scene.title = scene mode
+index.left.scene.title = Plan mode
 
-index.right.action.btnname1 = new window
-index.right.action.btnname2 = close window
-index.right.action.btnname3 = clear all
-index.right.action.btnname4 = draw window
+index.right.action.btnname1 = New
+index.right.action.btnname2 = Close
+index.right.action.btnname3 = Clean
+index.right.action.btnname4 = Draw
 
 # 下拉设置菜单
-index.setting.comm = communication
+index.setting.comm = Communication
 index.setting.comm.title = COMMUNICATION
-index.setting.comm.network  = network
-index.setting.comm.com = serial port
+index.setting.comm.network  = Network
+index.setting.comm.com = Serial port
 index.setting.comm.ip = IP address
 index.setting.comm.port = Port
 index.setting.comm.com_port = COM port
 index.setting.comm.baud_rate = Baud rate
 
-index.setting.splice = SPLICE
-index.setting.software = SOFTWARE
+index.setting.splice = Splice
+index.setting.splice.title = SPLICE
+index.setting.splice.resolution = Resolution
+index.setting.splice.resolution_title = RESOLUTION
+index.setting.splice.screen1 = Screen 1
+index.setting.splice.screen2 = Screen 2
+index.setting.splice.screen3 = Screen 3
+index.setting.splice.screen4 = Screen 4
+index.setting.splice.ims = Independent monitor settings
+index.setting.splice.param = Splicing parameters
+index.setting.splice.physical_screen = PhysicalScreen:
+index.setting.splice.logic_screen = LogicScreen:
+index.setting.splice.left_side = Left:
+index.setting.splice.right_side = Right:
+index.setting.splice.row = row
+index.setting.splice.rol = rol
+index.setting.splice.screen_width = Width(mm):
+index.setting.splice.screen_height = Height(mm):
+index.setting.splice.screen_frame = ScreenFrame(mm):
+index.setting.splice.border_top = top
+index.setting.splice.border_bottom = bottom
+index.setting.splice.border_left = left
+index.setting.splice.border_right = right
+index.setting.splice.screen_enable = Screen enable:
+index.setting.splice.actHSize = ActHSize
+index.setting.splice.actVSize = ActVSize
+index.setting.splice.hFront = HFront
+index.setting.splice.vFront = VFront
+index.setting.splice.hsWidth = HsWidth
+index.setting.splice.vsWidth = VsWidth
+index.setting.splice.hTotal = HTotal
+index.setting.splice.vTotal = VTotal
+index.setting.splice.hSyncPol = HSyncPol
+index.setting.splice.vSyncPol = VSyncPol
+index.setting.splice.fps = Fps
+
+index.setting.software = Software
+index.setting.software.title = SOFTWARE
 index.setting.software.lang = Language Settings
 index.setting.software.zh_CN = Chinese(Simplified)
 index.setting.software.en_US = U.S. English
-index.setting.software.lang_switcher = langSwitcher
+index.setting.software.lang_switcher = LangSwitcher
 index.setting.software.open_win = Open the window Settings
-index.setting.software.logic_fill = window logic fill mode:
+index.setting.software.logic_fill = Window logic fill mode:
 index.setting.software.tip = Tip Settings
 index.setting.software.menu_prompt = The menu prompt:
 index.setting.software.scenario_tip = Scenario plan tip:
+index.setting.software.log_tip = Log tip:
+index.setting.software.panel = Panel
+index.setting.software.ctrl_input = CtrlInput
+index.setting.software.contentual = Contentual
+index.setting.software.matrix_input = MatrixInput
+index.setting.software.net_video_source = NetVideoSource
+
 index.setting.help = &nbsp;help
-index.setting.user_manual = user manual
-index.setting.version_info = VERSON
+
+index.setting.user_manual = Help
+
+index.setting.version_info = Version
+index.setting.version_info.title = VERSION
 index.setting.vi.product_name = Product name: intelligent control system for joining together of skyworth
 index.setting.vi.file_version = File version:
 index.setting.vi.copyright = All right reserved: &copy;&nbsp;security technology co.,LTD. Shenzhen skyworth group of hin.Retain ownership
@@ -79,31 +125,30 @@ index.pop_menu.clean = clean up
 index.msg.synchronizing = synchronizing...
 index.msg.synchronized = synchronized!
 index.msg.invalid.input_signal = invalid input signal
-index.msg.no.select_win = you had to select a window
+index.msg.no.select_win = you must select a window
 
 # 模态框
 index.modal.title.attribute = Attribute
 index.modal.title.confirm = Confirm
 index.modal.title.prompt = Prompt
-index.modal.btn.close = close
-index.modal.btn.save = save
-index.modal.btn.confirm = confirm
-index.modal.btn.cancel = cancel
 index.modal.lable.id = win ID
 index.modal.lable.sid = signal ID
 index.modal.lable.x = x
 index.modal.lable.y = y
 index.modal.lable.w = width
 index.modal.lable.h = height
-index.modal.msg.del = Are you sure you want to delete this record?
-index.modal.msg.del.all = Are you sure you want to delete all records?
+index.modal.msg.del = Are you sure that you want to delete this record?
+index.modal.msg.del.all = Are you sure that you want to delete all records?
 
 # 按钮文字
 index.btn.screen = Screen wall
-index.btn.synchronize = synchronize
-index.btn.apply = apply
-index.btn.cancel = cancel
-index.btn.yes = yes
-index.btn.no = no
-index.btn.confirm = confirm
-index.btn.auto_recognition = autoRecognition
+index.btn.syn = Syn
+index.btn.apply = Apply
+index.btn.cancel = Cancel
+index.btn.yes = Yes
+index.btn.no = No
+index.btn.confirm = Confirm
+index.btn.auto_identification = AutoIdentification
+index.btn.advance = Advance
+index.btn.default = Default
+index.btn.ok = OK
