--- a/web/assets/Messages_en-US.properties
+++ b/web/assets/Messages_en-US.properties
@@ -1,35 +1,44 @@
-# This line is ignored by the plugin
-msg_hello = Hello
-msg_world = World
-msg_complex = Good morning {0}! \ 
-Are you OK? \
-This is a multi-line property :)
-
-msg_url = http://localhost/webapp/servletName?solution={0}
-
-msg_multi_placeholder = It\'s a {0} day... let\'s go {1}?
-msg_multi_placeholder_corrected = It''s a {0} day... let''s go {1}?
+# 用户
+user.action.ud_psw = &nbsp;UpdatePassword
+user.action.exit = &nbsp;exit
+user.authority.name = Name:
+user.authority.psw = Password:
+user.authority.up_psw.title = Update Password
+user.authority.up_psw.old = Old Password
+user.authority.up_psw.new = New Password
+user.authority.up_psw.confirm = Confirm Password
+user.authority.msg.invalid = This value is not valid
+user.authority.msg.invalid_name_or_psw = Invalid username or password
+user.authority.msg.invalid_captcha = Invalid captcha
+user.authority.msg.name_empty = The username is required and can\'t be empty
+user.authority.msg.psw_empty = The password is required and can\'t be empty
+user.authority.msg.name_length_less = The username must be more than 5 and less than 10 characters long
+user.authority.msg.type_err = The username can only consist of alphabetical, number, dot and underscore
+user.authority.msg.psw_length_less = The password must be more than 5 and less than 10 characters long
+user.authority.msg.psw_same_name = Password can\'t be consistent with the username
+user.authority.msg.psw_same_old = The password can\'t be the same as old password
+user.authority.msg.psw_same_confirm = The password and its confirm are not the same
+user.authority.msg.unknown = Unknown error
+user.authority.msg.psw_err = Password error
+user.authority.msg.psw_modified = Password modified
 
 # 页面文字
 index.title = Splicing control system
 index.test.input = input
-index.select.screen = Screen wall
-index.select.synchronize = synchronize
-index.left.action.title1 = Input signal
-index.left.action.title2 = scene
+index.left.action.title1 = Syn input signal
+index.left.action.title2 = Contextual
 index.left.action.title3 = setting
 index.left.action.btnname1 = ControlInput
 index.left.action.btnname2 = Contextual
 index.left.action.btnname3 = setting
 index.left.scene.title = Plan mode
-
 index.right.action.btnname1 = New
 index.right.action.btnname2 = Close
 index.right.action.btnname3 = Clean
 index.right.action.btnname4 = Draw
 
 # 下拉设置菜单
-index.setting.comm = Communication
+index.setting.comm = &nbsp;Communication
 index.setting.comm.title = COMMUNICATION
 index.setting.comm.network  = Network
 index.setting.comm.com = Serial port
@@ -38,9 +47,9 @@ index.setting.comm.port = Port
 index.setting.comm.com_port = COM port
 index.setting.comm.baud_rate = Baud rate
 
-index.setting.splice = Splice
+index.setting.splice = &nbsp;Splice
 index.setting.splice.title = SPLICE
-index.setting.splice.resolution = Resolution
+index.setting.splice.resolution = ScreenResolution
 index.setting.splice.resolution_title = RESOLUTION
 index.setting.splice.screen1 = Screen 1
 index.setting.splice.screen2 = Screen 2
@@ -74,7 +83,7 @@ index.setting.splice.hSyncPol = HSyncPol
 index.setting.splice.vSyncPol = VSyncPol
 index.setting.splice.fps = Fps
 
-index.setting.software = Software
+index.setting.software = &nbsp;Software
 index.setting.software.title = SOFTWARE
 index.setting.software.lang = Language Settings
 index.setting.software.zh_CN = Chinese(Simplified)
@@ -94,9 +103,9 @@ index.setting.software.net_video_source = NetVideoSource
 
 index.setting.help = &nbsp;help
 
-index.setting.user_manual = Help
+index.setting.user_manual = &nbsp;Help
 
-index.setting.version_info = Version
+index.setting.version_info = &nbsp;Version
 index.setting.version_info.title = VERSION
 index.setting.vi.product_name = Product name: intelligent control system for joining together of skyworth
 index.setting.vi.file_version = File version:
@@ -126,6 +135,11 @@ index.msg.synchronizing = synchronizing...
 index.msg.synchronized = synchronized!
 index.msg.invalid.input_signal = invalid input signal
 index.msg.no.select_win = you must select a window
+index.msg.exit = Exit right now?
+index.msg.win_index = WindowIndex:
+index.msg.win_zindex = WindowZindex:
+index.msg.win_pos = WindowPosition:
+index.msg.win_size = WindowSize:
 
 # 模态框
 index.modal.title.attribute = Attribute
@@ -152,3 +166,5 @@ index.btn.auto_identification = AutoIdentification
 index.btn.advance = Advance
 index.btn.default = Default
 index.btn.ok = OK
+index.btn.submit = Submit
+index.btn.reset = Reset
