--- a/web/assets/Messages_zh-CN.properties
+++ b/web/assets/Messages_zh-CN.properties
@@ -1,11 +1,30 @@
-msg_hello = 你好
-msg_world = 世界
-msg_complex = 早上好 {0}!
+# 用户
+user.action.ud_psw = &nbsp;修改密码
+user.action.exit = &nbsp;退出
+user.authority.name = 用户名：
+user.authority.psw = 密码：
+user.authority.up_psw.title = 修改密码
+user.authority.up_psw.old = 原密码
+user.authority.up_psw.new = 新密码
+user.authority.up_psw.confirm = 确认密码
+user.authority.msg.invalid = 无效值
+user.authority.msg.invalid_name_or_psw = 用户名或密码错误
+user.authority.msg.invalid_captcha = 验证码错误
+user.authority.msg.name_empty = 用户名不能为空
+user.authority.msg.psw_empty = 密码不能为空
+user.authority.msg.name_length_less = 用户名的长度在5~10个字符之间
+user.authority.msg.type_err = 该项只能由字母、数字、点和下划线组成
+user.authority.msg.psw_length_less = 密码的长度在5~10个字符之间
+user.authority.msg.psw_same_name = 密码不能与用户名一致
+user.authority.msg.psw_same_old = 新密码不能与原密码一致
+user.authority.msg.psw_same_confirm = 两次输入的密码不一致
+user.authority.msg.unknown = 未知错误
+user.authority.msg.psw_err = 密码错误
+user.authority.msg.psw_modified = 密码修改成功
 
 # 页面文字
 index.title = 拼接控制器
 index.test.input = 输入
-
 index.left.action.title1 = 输入信号
 index.left.action.title2 = 情景模式
 index.left.action.title3 = 设置
@@ -19,7 +38,7 @@ index.right.action.btnname3 = 清空
 index.right.action.btnname4 = 开窗
 
 # 下拉设置菜单
-index.setting.comm = 通信设置
+index.setting.comm = &nbsp;通信设置
 index.setting.comm.title = 通信设置
 index.setting.comm.network  = 网络连接
 index.setting.comm.com = 串口连接
@@ -28,7 +47,7 @@ index.setting.comm.port = 端口
 index.setting.comm.com_port = COM口
 index.setting.comm.baud_rate = 波特率
 
-index.setting.splice = 拼接设置
+index.setting.splice = &nbsp;拼接设置
 index.setting.splice.title = 拼接设置
 index.setting.splice.resolution = 屏幕分辨率
 index.setting.splice.resolution_title = 屏幕分辨率
@@ -65,7 +84,7 @@ index.setting.splice.hSyncPol = 水平同步极性
 index.setting.splice.vSyncPol = 垂直同步极性
 index.setting.splice.fps = 刷新频率
 
-index.setting.software = 软件设置
+index.setting.software = &nbsp;软件设置
 index.setting.software.title = 软件设置
 index.setting.software.lang = 语言设置
 index.setting.software.zh_CN = 简体中文
@@ -85,9 +104,9 @@ index.setting.software.net_video_source = 网络视频源
 
 index.setting.help = &nbsp;帮助
 
-index.setting.user_manual = 用户手册
+index.setting.user_manual = &nbsp;用户手册
 
-index.setting.version_info = 版本信息
+index.setting.version_info = &nbsp;版本信息
 index.setting.version_info.title = 版本信息
 index.setting.vi.product_name = 产品名称：创维群欣智能拼接控制系统
 index.setting.vi.file_version = 文件版本：
@@ -117,6 +136,11 @@ index.msg.synchronizing = 正在同步显示墙信息...
 index.msg.synchronized = 同步完成！
 index.msg.invalid.input_signal = 无效的输入信号
 index.msg.no.select_win = 您必须选择一个窗口
+index.msg.exit = 您要退出吗？
+index.msg.win_index = 窗口序号：
+index.msg.win_zindex = 窗口层次：
+index.msg.win_pos = 窗口坐标：
+index.msg.win_size = 窗口尺寸：
 
 # 模态框
 index.modal.title.attribute = 属性
@@ -143,3 +167,5 @@ index.btn.auto_identification = 自动识别
 index.btn.advance = 高级
 index.btn.default = 默认
 index.btn.ok = 确定
+index.btn.submit = 提交
+index.btn.reset = 重置
