--- a/web/assets/Messages_zh-CN.properties
+++ b/web/assets/Messages_zh-CN.properties
@@ -137,10 +137,10 @@ index.msg.synchronized = 同步完成！
 index.msg.invalid.input_signal = 无效的输入信号
 index.msg.no.select_win = 您必须选择一个窗口
 index.msg.exit = 您要退出吗？
-index.msg.win_index = 窗口序号：
-index.msg.win_zindex = 窗口层次：
-index.msg.win_pos = 窗口坐标：
-index.msg.win_size = 窗口尺寸：
+index.msg.win_index = 序号：
+index.msg.win_zindex = 层次：
+index.msg.win_pos = 坐标：
+index.msg.win_size = 尺寸：
 
 # 模态框
 index.modal.title.attribute = 属性
