--- a/web/assets/Messages_en-US.properties
+++ b/web/assets/Messages_en-US.properties
@@ -136,10 +136,10 @@ index.msg.synchronized = synchronized!
 index.msg.invalid.input_signal = invalid input signal
 index.msg.no.select_win = you must select a window
 index.msg.exit = Exit right now?
-index.msg.win_index = WindowIndex:
-index.msg.win_zindex = WindowZindex:
-index.msg.win_pos = WindowPosition:
-index.msg.win_size = WindowSize:
+index.msg.win_index = Index:
+index.msg.win_zindex = Zindex:
+index.msg.win_pos = Position:
+index.msg.win_size = Size:
 
 # 模态框
 index.modal.title.attribute = Attribute
