--- a/web/assets/Messages_en-US.properties
+++ b/web/assets/Messages_en-US.properties
@@ -162,7 +162,7 @@ index.btn.cancel = Cancel
 index.btn.yes = Yes
 index.btn.no = No
 index.btn.confirm = Confirm
-index.btn.auto_identification = AutoIdentification
+index.btn.auto_identification = Auto
 index.btn.advance = Advance
 index.btn.default = Default
 index.btn.ok = OK
