--- a/web/assets/Messages.properties
+++ b/web/assets/Messages.properties
@@ -149,6 +149,7 @@ index.msg.win_size = Size:
 index.modal.title.attribute = Attribute
 index.modal.title.confirm = Confirm
 index.modal.title.prompt = Prompt
+index.modal.title.preview = Preview
 index.modal.lable.id = win ID
 index.modal.lable.sid = signal ID
 index.modal.lable.x = x
@@ -172,3 +173,5 @@ index.btn.default = Default
 index.btn.ok = OK
 index.btn.submit = Submit
 index.btn.reset = Reset
+index.btn.fullscr = FullSrc
+index.btn.compress = Compress
