--- a/web/assets/Messages_en-US.properties
+++ b/web/assets/Messages_en-US.properties
@@ -145,6 +145,7 @@ index.msg.win_size = Size:
 index.modal.title.attribute = Attribute
 index.modal.title.confirm = Confirm
 index.modal.title.prompt = Prompt
+index.modal.title.preview = Preview
 index.modal.lable.id = win ID
 index.modal.lable.sid = signal ID
 index.modal.lable.x = x
@@ -168,3 +169,5 @@ index.btn.default = Default
 index.btn.ok = OK
 index.btn.submit = Submit
 index.btn.reset = Reset
+index.btn.fullscr = FullSrc
+index.btn.compress = Compress
