--- a/web/assets/Messages_zh-CN.properties
+++ b/web/assets/Messages_zh-CN.properties
@@ -28,7 +28,7 @@ index.test.input = 输入
 index.left.action.title1 = 输入信号
 index.left.action.title2 = 情景模式
 index.left.action.title3 = 设置
-index.left.action.btnname1 = 输入
+index.left.action.btnname1 = 信号源
 index.left.action.btnname2 = 情景模式
 index.left.action.btnname3 = 设置
 index.left.scene.title = 预设模式
@@ -146,6 +146,7 @@ index.msg.win_size = 尺寸：
 index.modal.title.attribute = 属性
 index.modal.title.confirm = 确认
 index.modal.title.prompt = 提示
+index.modal.title.preview = 预览
 index.modal.lable.id = 窗口ID
 index.modal.lable.sid = 信号源ID
 index.modal.lable.x = x
@@ -169,3 +170,5 @@ index.btn.default = 默认
 index.btn.ok = 确定
 index.btn.submit = 提交
 index.btn.reset = 重置
+index.btn.fullscr = 全屏
+index.btn.compress = 还原
