--- a/web/assets/Messages_en-US.properties
+++ b/web/assets/Messages_en-US.properties
@@ -156,7 +156,7 @@ index.modal.msg.del = Are you sure that you want to delete this record?
 index.modal.msg.del.all = Are you sure that you want to delete all records?
 
 # 按钮文字
-index.btn.screen = Screen wall
+index.btn.screen = Wall
 index.btn.syn = Syn
 index.btn.apply = Apply
 index.btn.cancel = Cancel
@@ -171,3 +171,4 @@ index.btn.submit = Submit
 index.btn.reset = Reset
 index.btn.fullscr = FullSrc
 index.btn.compress = Compress
+index.btn.more = More
