--- a/web/assets/Messages.properties
+++ b/web/assets/Messages.properties
@@ -176,3 +176,4 @@ index.btn.reset = Reset
 index.btn.fullscr = FullSrc
 index.btn.compress = Compress
 index.btn.more = More
+index.btn.setting = Setting
