--- a/web/assets/Messages_en-US.properties
+++ b/web/assets/Messages_en-US.properties
@@ -172,3 +172,4 @@ index.btn.reset = Reset
 index.btn.fullscr = FullSrc
 index.btn.compress = Compress
 index.btn.more = More
+index.btn.setting = Setting
