--- a/web/assets/Messages_en-US.properties
+++ b/web/assets/Messages_en-US.properties
@@ -1,6 +1,6 @@
 # 用户
 user.action.ud_psw = &nbsp;UpdatePassword
-user.action.exit = &nbsp;exit
+user.action.exit = &nbsp;Exit
 user.authority.name = Name:
 user.authority.psw = Password:
 user.authority.up_psw.title = Update Password
@@ -24,18 +24,21 @@ user.authority.msg.psw_modified = Password modified
 
 # 页面文字
 index.title = Splicing control system
-index.test.input = input
+index.test.input = Input
 index.left.action.title1 = Syn input signal
 index.left.action.title2 = Contextual
-index.left.action.title3 = setting
+index.left.action.title3 = Setting
 index.left.action.btnname1 = ControlInput
 index.left.action.btnname2 = Contextual
-index.left.action.btnname3 = setting
+index.left.action.btnname3 = Setting
 index.left.scene.title = Plan mode
 index.right.action.btnname1 = New
 index.right.action.btnname2 = Close
 index.right.action.btnname3 = Clean
 index.right.action.btnname4 = Draw
+index.right.action.scene = Scene
+index.right.action.one_to_one = 1 to 1
+index.right.action.one_to_four = 1 to 4
 
 # 下拉设置菜单
 index.setting.comm = &nbsp;Communication
@@ -112,29 +115,29 @@ index.setting.vi.file_version = File version:
 index.setting.vi.copyright = All right reserved: &copy;&nbsp;security technology co.,LTD. Shenzhen skyworth group of hin.Retain ownership
 
 # 长按呼出菜单
-index.pop_menu.fullscreen = fullscreen
-index.pop_menu.full_sgl_src = single screen
-index.pop_menu.top_level = top
-index.pop_menu.bottom_level = bottom
-index.pop_menu.up_level = up level
-index.pop_menu.down_level = down level
-index.pop_menu.lock = lock
-index.pop_menu.unlock = unlock
-index.pop_menu.restore = restore
-index.pop_menu.close = close
-index.pop_menu.attr = attribute
+index.pop_menu.fullscreen = Fullscreen
+index.pop_menu.full_sgl_src = Single screen
+index.pop_menu.top_level = Top
+index.pop_menu.bottom_level = Bottom
+index.pop_menu.up_level = Up level
+index.pop_menu.down_level = Down level
+index.pop_menu.lock = Lock
+index.pop_menu.unlock = Unlock
+index.pop_menu.restore = Restore
+index.pop_menu.close = Close
+index.pop_menu.attr = Attribute
 
-index.pop_menu.open = open
-index.pop_menu.save = save
-index.pop_menu.edit = edit
-index.pop_menu.del = delete
-index.pop_menu.clean = clean up
+index.pop_menu.open = Open
+index.pop_menu.save = Save
+index.pop_menu.edit = Edit
+index.pop_menu.del = Delete
+index.pop_menu.clean = Clean up
 
 # 消息提示
-index.msg.synchronizing = synchronizing...
-index.msg.synchronized = synchronized!
-index.msg.invalid.input_signal = invalid input signal
-index.msg.no.select_win = you must select a window
+index.msg.synchronizing = Synchronizing...
+index.msg.synchronized = Synchronized!
+index.msg.invalid.input_signal = Invalid input signal
+index.msg.no.select_win = You must select a window
 index.msg.exit = Exit right now?
 index.msg.win_index = Index:
 index.msg.win_zindex = Zindex:
@@ -173,3 +176,7 @@ index.btn.fullscr = FullSrc
 index.btn.compress = Compress
 index.btn.more = More
 index.btn.setting = Setting
+index.btn.open = Open
+index.btn.del = Del
+index.btn.del_all = DelAll
+index.btn.save = Save
