--- a/web/assets/Messages_zh-CN.properties
+++ b/web/assets/Messages_zh-CN.properties
@@ -36,6 +36,9 @@ index.right.action.btnname1 = 新建
 index.right.action.btnname2 = 关闭
 index.right.action.btnname3 = 清空
 index.right.action.btnname4 = 开窗
+index.right.action.scene = 情景
+index.right.action.one_to_one = 1 对 1
+index.right.action.one_to_four = 1 对 4
 
 # 下拉设置菜单
 index.setting.comm = &nbsp;通信设置
@@ -174,3 +177,7 @@ index.btn.fullscr = 全屏
 index.btn.compress = 还原
 index.btn.more = 更多
 index.btn.setting = 设置
+index.btn.open = 打开
+index.btn.del = 删除
+index.btn.del_all = 删除所有
+index.btn.save = 保存
